major overhaul plus animated gifs now work too